<resources>
    <string name="app_name">LUDA</string>

    <!-- Welcome Screen -->
    <string name="welcome_title">BIENVENIDO A\nLUDA</string>
    <string name="start_button">EMPEZAR</string>

    <!-- Tabs -->
    <string name="login_tab">Iniciar Sesión</string>
    <string name="register_tab">Registrar</string>

    <!-- Input Fields -->
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="full_name_hint">Nombre completo</string>
    <string name="confirm_password_hint">Confirmar contraseña</string>

    <!-- Login Screen -->
    <string name="login_button">Iniciar Sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="or_login_with">o ingreso con</string>
    <string name="no_account">¿No tienes cuenta? Regístrate</string>

    <!-- Register Screen -->
    <string name="accept_terms">Acepto los Términos y la Política</string>
    <string name="register_button">Registrarme</string>
    <string name="or_register_with">o registrarte con</string>
    <string name="have_account">¿Ya tienes cuenta? Inicia sesión</string>

    <!-- Home Screen -->
    <string name="support_activities">Actividades de apoyo</string>
    <string name="personal_diary">Diario Personal</string>
    <string name="appointments">Reservas de citas</string>
    <string name="tests">Tests</string>

    <!-- Support Activities -->
    <string name="breathing_exercise">Música para dormir</string>
    <string name="sports_exercise">Deporte y movimiento</string>
    <string name="sleep_management">Gestión del Sueño</string>
    <string name="virtual_companions">Compañeros virtuales</string>

    <string name="action_profile">Perfil</string>
    <string name="action_logout">Cerrar Sesión</string>


</resources>